  the regression tests.
- Added new function buildingspy.io.outputfile.get_model_statistics,
  which allows obtaining the statistics of the model, such as the
  number of nonlinear equations.
- Added in buildingspy.development.regressiontest.Tester() the
  new function writeOpenModelicaResultDictionary() that writes
  a result dictionary for the OpenModelica regression tests.
- Added regression tests for FMU export for Dymola.  
- In regression tests, added a check for parameters that only have
  a start value assigned.
- In buildingspy.development.regressiontest, added functionality
  to save Output, InitialUnknown and Derivatives dependency on
  inputs to the reference results.
- In buildingspy.development.regressiontest, added option to
  use pedantic Modelica check.
- Improved regression tests so that the list of plot variables
  no longer needed to be on a single line. This was done
  as later versions of Dymola do not write line breaks when
  exporting the .mos script.
- Added option to simulate a Modelica model without recompilation.
- In buildingspy.development.regressiontest, added test for
  differentiation of if-expressions, and for invalid connect statements.

Version 1.4.0, February 28, 2014 -- Release 1.4
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- In development.unittest, added test that addresses the situation
  that some results are parameters in the Buildings library, but
  variables in the Annex 60 library.
- In simulate.Simulator, corrected error that prevented output
  files from being copied if the result directory was set to '.'
- Added unit tests and documentation tests.
- Corrected various errors in the documentation.
- Renamed development.unittest to development.regressiontest. This
  was required for the python doctest to work.
- In development.regressiontest, added new method setLibraryRoot(rootDir)
  to allow running the unit tests from a directory other than the library
  root directory.